app-manifests/prod/argo-rollouts-demo/bluegreen-rollout-automatic.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bluegreen-demo
  labels:
    app: bluegreen-demo
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: bluegreen-demo
  template:
    metadata:
      labels:
        app: bluegreen-demo
    spec:
      containers:
      - name: bluegreen-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    blueGreen:
      activeService: bluegreen-demo
      previewService: bluegreen-demo-preview
      scaleDownDelaySeconds: 300
      prePromotionAnalysis:
        templates:
        - templateName: success-rate
        args:
        # Find this in the Details of the Ingress in the GKE UI
        - name: url_map_name
          value: k8s2-um-0v601exe-default-bluegreen-demo-preview-20nzgdyg
        - name: project_id
          value: project-435400
      postPromotionAnalysis:
        templates:
        - templateName: success-rate
        args:
        # Find this in the Details of the Ingress in the GKE UI
        - name: url_map_name
          value: k8s2-um-0v601exe-default-bluegreen-demo-9l1rnwww
        - name: project_id
          value: project-435400
      previewReplicaCount: 1
      autoPromotionEnabled: true
      autoPromotionSeconds: 1
      abortScaleDownDelaySeconds: 300
